server/vm-k8s/k8s/base/nginx/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: app
  labels:
    app: nginx
spec:
  containers:
    - name: app
      image: nginx
