server/vm-k8s/k8s/base/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
